objects/Stage_Mapping_for_Close_Opportunity__mdt.object
<CustomObject>
    <description>This custom setting contains data for the Stage mapping with Main reason for close for Close Opportunity Quick Action</description>
    <fields>
        <fullName>Main_Reason_for_Close__c</fullName>
        <description>Reason for closing the opportunity</description>
        <label>Main Reason for Close</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Record_Type__c</fullName>
        <description>New record type of the opportunity after selecting new stage and main reason for close</description>
        <inlineHelpText>New record type of the opportunity after selecting new stage and main reason for close</inlineHelpText>
        <label>New Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Stores the record type for which the values of Stage and Main Reason for close will be applicable</description>
        <inlineHelpText>Stores the record type for which the values of Stage and Main Reason for close will be applicable</inlineHelpText>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_API_Name__c</fullName>
        <label>Stage API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>ABB Sales Stage</description>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Stage Mapping for Close Opportunity</label>
    <pluralLabel>Stage Mappings for Close Opportunity</pluralLabel>
</CustomObject>